--- a/nextflow.config
+++ b/nextflow.config
@@ -7,87 +7,88 @@ manifest {
 
 profiles {
   uw_batch {
-      params {
-        input_folder = null
-        run_id = null
-        output = "s3://uwlm-personal/nkrumm/umi/out/"
-        // options
-        downsample_reads = null
-        save_intermediate_output = false
-        // reference files
-        picard_targets = "s3://uwlm-ngs-refs/human/MONCv1/MONC_estimated_targets.nochr.interval_list"
-        picard_baits = "s3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list"
-        bed_baits = "s3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
-        bed_targets = "s3://uwlm-ngs-refs/human/MONCv1/MONC_estimated_targets.nochr.bed"
-        ref_fasta = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta"
-        ref_index = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}"
-      }
-      workDir = 's3://uwlm-nextflow-data/workdir/umi-nextflow'
-      process {
-          scratch = "/docker_scratch"
-          queue = 'ngs-queue'
-          executor = 'awsbatch'
+    params {
+      input_folder = null
+      run_id = null
+      output = "s3://uwlm-personal/nkrumm/umi/out/"
+      // options
+      downsample_reads = null
+      save_intermediate_output = false
+      // reference files
+      picard_targets = "s3://uwlm-ngs-refs/human/MONCv1/MONC_estimated_targets.nochr.interval_list"
+      picard_baits = "s3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list"
+      bed_baits = "s3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
+      bed_targets = "s3://uwlm-ngs-refs/human/MONCv1/MONC_estimated_targets.nochr.bed"
+      ref_fasta = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta"
+      ref_index = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}"
+    }
+    workDir = 's3://uwlm-nextflow-data/workdir/umi-nextflow'
+    process {
+      scratch = "/docker_scratch"
+      queue = 'ngs-queue'
+      executor = 'awsbatch'
 
-          withLabel:bwa {
-            container = 'sheenamt/alignment:v1.0'
-            cpus = 30
-            memory = "60GB"
-          }
-          withLabel:fgbio{
-            container = 'quay.io/biocontainers/fgbio:1.1.0--0'
-            memory = "12GB"
-          }
-          withLabel:sambamba{
-            container = 'quay.io/biocontainers/sambamba:0.7.1--h148d290_2'
-            cpus = 8
-            memory = "12GB"
-          }
-          withLabel:picard{
-            container = 'quay.io/biocontainers/picard:2.22.1--0'
-            memory = "32GB"
-          }
-          withLabel:fastqc{
-            container = 'quay.io/biocontainers/fastqc:0.11.8--1'
-            cpus 2
-            memory "8GB"
-          }
-          withLabel:mosdepth{
-            container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
-            cpus 4 // per docs, no benefit after 4 threads
-            memory '4GB'
-          }
-          withLabel:multiqc{
-            container = 'sheenamt/multiqc-pandas:v1.0'
-            cpus 4
-            memory '4GB'
-          }
-          withLabel:umivarcal{
-            container = 'sheenamt/umi-varcal:v1.0'
-          }
-          withLabel:bcftools{
-            container = 'quay.io/biocontainers/bcftools:1.10.2--hd2cd319_0'
-          }
-          withLabel:vardict{
-            container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
-          }
-          withLabel:pileup{
-            container = 'sheenamt/alignment:v1.0'
-            cpus = 2
-            memory = "8GB"
-          }
-          // withLabel:varscan{
-          //   container = 'quay.io/biocontainers/varcsan:2.3.7--3'
-          //   memory = "8GB"
-          // }
+      withLabel:bwa {
+        container = 'sheenamt/alignment:v1.0'
+        cpus = 30
+        memory = "60GB"
       }
-      aws {
-          region = 'us-west-2'
-          batch {
-              volumes = '/docker_scratch'
-              cliPath = '/home/ec2-user/miniconda/bin/aws'
-          }
+      withLabel:fgbio{
+        container = 'quay.io/biocontainers/fgbio:1.1.0--0'
+        memory = "12GB"
       }
+      withLabel:sambamba{
+        container = 'quay.io/biocontainers/sambamba:0.7.1--h148d290_2'
+        cpus = 8
+        memory = "12GB"
+      }
+      withLabel:picard{
+        container = 'quay.io/biocontainers/picard:2.22.1--0'
+        memory = "32GB"
+      }
+      withLabel:fastqc{
+        container = 'quay.io/biocontainers/fastqc:0.11.8--1'
+        cpus = 2
+        memory = "8GB"
+      }
+      withLabel:mosdepth{
+        container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
+        cpus = 4 // per docs, no benefit after 4 threads
+        memory '4GB'
+      }
+      withLabel:multiqc{
+        container = 'sheenamt/multiqc-pandas:v1.0'
+        cpus = 4
+        memory = '4GB'
+      }
+      withLabel:umivarcal{
+        container = 'sheenamt/umi-varcal:v1.0'
+      }
+      withLabel:bcftools{
+        container = 'quay.io/biocontainers/bcftools:1.10.2--hd2cd319_0'
+      }
+      withLabel:vardict{
+        container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
+      }
+      withLabel:pileup{
+        container = 'sheenamt/alignment:v1.0'
+        cpus = 2
+        memory = "8GB"
+      }
+      // withLabel:varscan{
+      //   container = 'quay.io/biocontainers/varcsan:2.3.7--3'
+      //   memory = "8GB"
+      // }
+    }
+    aws {
+      region = 'us-west-2'
+      batch {
+        volumes = '/docker_scratch'
+        cliPath = '/home/ec2-user/miniconda/bin/aws'
+      }
+    }
   }
+
   local {
     report.enabeled = true
     trace.enabeled = true
@@ -142,18 +143,18 @@ profiles {
       }
       withLabel:fastqc{
         container = 'quay.io/biocontainers/fastqc:0.11.8--1'
-        cpus 2
-        memory "8GB"
+        cpus = 2
+        memory = "8GB"
       }
       withLabel:mosdepth{
         container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
-        cpus 4 // per docs, no benefit after 4 threads
-        memory '4GB'
+        cpus = 4 // per docs, no benefit after 4 threads
+        memory = '4GB'
       }
       withLabel:multiqc{
         container = 'sheenamt/multiqc-pandas:v1.0'
-        cpus 4
-        memory '4GB'
+        cpus = 4
+        memory = '4GB'
       }
       withLabel:umivarcal{
         container = 'sheenamt/umi-varcal:v1.0'
